4.0.6
  15-08-26
  Improvement
  * #i0017: _ffValue: error prompt
  * #i0016: Labeling *.xlf

4.0.5
  15-08-24
  Improvement
  * #i0015: Update Manual

4.0.4
  15-08-17
  Improvement
  * #i0014: Flexform with DRS

4.0.3
  15-08-07
  Update
  * #i0013: Manual with CSS sample for images

4.0.2
  15-08-04
  Update
  * #i0012: Manual with CSS sample

4.0.1
  15-07-30
  Bugfix
  * #i0011: XML: missing tag
            Resources/Private/Language/de.locallang_db.xlf

4.0.0
  15-07-29
  Major Features
  * #i0010: Preparation for TYPO3 7.x
  * #i0009: Session handling

3.1.1
  15-06-22
  Improvement
  * #i0008: Constant Editor: new property url.
  Bugfix
  * #i0007: PHP Warning: in_array() expects parameter 2 to be array, null given in Configuration/Flexforms/Controller.php line 181

3.1.0
  15-06-21
  Major Feature
  * #67396: New PDF engine tcpdf
            * Dependencies
              * t3_tcpdf (new)
            * Flexform
              * user interface (pi1) is replaced by a new one
              * button (pi2) is removed

3.0.0
  15-02-03
  Feature
  * #i0005: Constant Editor: page.pdf_button. Id of the page, which contains the PDF Controller button.
            Moved
            * plugin.tx_pdfcontroller_pi2.page.pdf_controller > plugin.pdfcontroller.pages.userinterface.id
            * plugin.tx_pdfcontroller_pi2.realUrl.print > plugin.pdfcontroller.realUrl.print
            * plugin.tx_pdfcontroller_pi2.typeNum.print > plugin.pdfcontroller.pages.print.typeNum
  Improvement
  * #67426: Unique typenum for print PAGE object
  * #67425: Unique typenum for pdf PAGE object
  * #i0006: HTML2PS: Deprecated: set_magic_quotes_runtime()
            * Resources/Public/html2ps_v2043/public_html/config.parse.php

2.0.4
  15-02-25
  Feature
  * #47108:	Documentation of adding indidiual fonts
  Manual
  * #i0004: Update

2.0.3
  15-02-03
  SECURITY FIX!
  * #i0003: Fix against Cross-Site Scripting
            Done by Christian Bernet, http://www.bernetimux.ch/